--- a/gradle.properties
+++ b/gradle.properties
@@ -12,10 +12,10 @@ org.gradle.configuration-cache=false
 minecraft_version=1.21.10
 yarn_mappings=1.21.10+build.1
 loader_version=0.18.4
-loom_version=1.14-SNAPSHOT
+loom_version=1.14.10
 
 # Mod Properties
-mod_version=1.21.10-1.1.1
+mod_version=1.21.10-1.1.4
 maven_group=yellowbirb.hypixelchattabs
 archives_base_name=hypixel-chat-tabs
 
